yoshimi 1.5.2 M

2017-7-25 Jesper
* Bugfix: Fixed segfault from edge cases when float->int
  conversion was very close to zero in formant filter
  transition calculations.
* New formant filter editing tools - visual parameter
  manipulation on the frequency graph, primarily
  mouse-driven.
* New tooltips for the formant filter control knobs and
  amended related tooltips in filter envelopes/LFO's
  to show the differences between formant filters and
  the other types.

2017-7-24 Will
* Started refining loads and saves (state first).

2017-7-22 Will
* Minor optimisations and clarifications.
* Updated man page.

2017-7-21 Will
* Removed some redundant code.
* State load is now 'silent'.
* Implemented lock-free state load & save.
* Fixed potential memory leak in session save.
* Doc updates - of course :)

2017-7-20 Will
* Improved CLI handling of delays from slow actions.
  Has a switch that only releases when action completes.
* More doc updates and corrections.

2017-7-19 Will
* transfertext() now checks GUI exists before sending.

2017-7-18 Will
* Bugfix: Bank dropdown list was showing wrong entry
  on bank root change but actual contents correct.

2017-7-16 Will
* Refinements to CLI.
* Direct access to loading and saving scales done.
  More enhancements planned.
* Updated docs.

2017-7-15 Will
* Completed conversion of CLI config controls.
* Reorganised CLI code.
* Config GUI also converted.
* Reformatted config GUI code.
  It was getting very untidy :(

2017-7-14 Will
* Created new 'config' CLI submenu.
* Converted some 'normal' CLI config controls.

2017-7-13 Will
* All Config limits defined.
* Updated docs.

2017-7-12 Will
* Values can now be corrected for range by the CLI.
* Controls can be set to defaults by the CLI.
* CLI can now test and report 'occupied' CC ranges.
* doc updates.

2017-7-4 Will
* Resolved GUI to CLI miscMsg problem. Back on course :)
  Was due to CLI reporting blocking some 'Resolves' that
  use miscMsg to return text messages.