@@ -1,5 +1,11 @@
 yoshimi 1.5.2 M
 
+2017-7-26 Wiil
+* Resolved Vector display issues.
+* More refinements to Vector controls.
+* Improved messaging with state loads.
+* Fixed, non-fatal XML warning messages.
+
 2017-7-25 Jesper
 * Bugfix: Fixed segfault from edge cases when float->int
   conversion was very close to zero in formant filter
